fix the text color in gitalk comment section, under dark mode.
it can't. so we choice a mid-gray color.

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -496,6 +496,20 @@ body {
   }
 }
 
+.gt-container {
+  /*.gt-header-comment { */
+    .gt-comment-textarea {
+      color: #aa9988;
+    }
+  /* } */
+}
+
+.gt-container {
+  .gt-comment-body {
+    color: #aa9988 !important;
+  }
+}
+
 /*
    Related
    ========================================================================== */
